# EasyRL

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  thoughts.md
docs/: elts.md  scf.md  soi.md  think_taxonomy.md  xrd_example.md
docs/Bolgiano et al. - 2008 - US GAAP Financial Statement Taxonomy Project XBRL US GAAP Taxonomies v1.0 Technical Guide/: XBRLUSGAAPTaxonomies-2008-03-31.zip.webloc
md_private/: hatch.md
src/: documentation.md
src/easyrl/: __init__.py
src/easyrl/core/: __init__.py  namespaces.py  parser.py  streaming.py
src/easyrl/linkbases/: __init__.py  label.py  reference.py
src/easyrl/utils/: __init__.py  href.py
src/leanrl/: __init__.py
src/leanrl/linkbases/: README.md  __init__.py  calculation.py  definition.py  helper.py  hierarchy.py  label.py  presentation.py  reference.py
src/leanrl/taxonomy/: __init__.py  constants.py  helper.py  schema.py
src/output-md/: leanrl_core.md  leanrl_linkbases.md  leanrl_root.md  leanrl_structure.md  leanrl_taxonomy.md  leanrl_utils.md
tests/: test1.py  test2.py  test3.py
tests/data/: sample_calculation.xml  sample_definition.xml
